--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="week_day">平日</string>
     <string name="week_end">周末</string>
     <string name="week">周</string>
+    <string name="caesura">、</string>
 
     <!-- 铃声选择界面 -->
     <string name="ring_select">铃声选择</string>
