set weather info7

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -118,4 +118,21 @@
     <!-- 音频播放 -->
     <string name="play_fail">播放失败</string>
 
+    <!-- 天气 -->
+    <string name="initial">--</string>
+    <string name="today">今天</string>
+    <string name="tomorrow">明天</string>
+    <string name="the_day_of_tomorrow">后天</string>
+    <string name="days_forecast">多天预报</string>
+    <string name="life_index">生活指数</string>
+    <string name="umbrella">雨伞</string>
+    <string name="ultraviolet_rays">紫外线</string>
+    <string name="dress">穿衣</string>
+    <string name="cold">感冒</string>
+    <string name="morning_exercise">晨练</string>
+    <string name="sport">运动</string>
+    <string name="car_wash">洗车</string>
+    <string name="fish">钓鱼</string>
+    <string name="no">无</string>
+
 </resources>
