pull to refresh completed

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -132,7 +132,7 @@
     <string name="morning_exercise">晨练</string>
     <string name="sport">运动</string>
     <string name="car_wash">洗车</string>
-    <string name="fish">钓鱼</string>
+    <string name="air_cure">晾晒</string>
     <string name="no">无</string>
 
 </resources>
