quality wind humidity image....

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -119,7 +119,7 @@
     <string name="play_fail">播放失败</string>
 
     <!-- 天气 -->
-    <string name="initial">--</string>
+    <string name="yesterday">昨天</string>
     <string name="today">今天</string>
     <string name="tomorrow">明天</string>
     <string name="the_day_of_tomorrow">后天</string>
@@ -134,5 +134,26 @@
     <string name="car_wash">洗车</string>
     <string name="air_cure">晾晒</string>
     <string name="no">无</string>
+    <string name="alarm">预警</string>
+    <string name="update_time">%1$s发布</string>
+    <string name="aqi">%1$s %2$s</string>
+    <string name="humidity">湿度 %1$s</string>
+    <string name="date">%1$s/%2$s</string>
+    <string name="pull_to_refresh">下拉更新</string>
+    <string name="refreshing">正在更新...</string>
+    <string name="leave_to_refresh">松手可更新</string>
+    <string name="turn">%1$s转%2$s</string>
+    <string name="umbrella_detail">雨伞指数详情</string>
+    <string name="ultraviolet_Rays_detail">紫外线指数详情</string>r
+    <string name="dress_detail">穿衣指数详情</string>
+    <string name="cold_detail">感冒指数详情</string>
+    <string name="morning_exercise_detail">晨练指数详情</string>
+    <string name="sport_detail">运动指数详情</string>
+    <string name="car_wash_detail">洗车指数详情</string>
+    <string name="air_cure_detail">晾晒指数详情</string>
+    <string name="interval_day">%1$d天前更新</string>
+    <string name="interval_hour">%1$d小时前更新</string>
+    <string name="interval_minute">%1$d分钟前更新</string>
+    <string name="interval_just">刚刚更新</string>
 
 </resources>
