--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -133,14 +133,17 @@
     <string name="sport">运动</string>
     <string name="car_wash">洗车</string>
     <string name="air_cure">晾晒</string>
-    <string name="no">无</string>
+    <string name="no_data">暂无数据</string>
+    <string name="no">暂无</string>
+    <string name="dash">--</string>
+    <string name="dash_degree">--℃</string>
     <string name="alarm">预警</string>
     <string name="update_time">%1$s发布</string>
     <string name="aqi">%1$s %2$s</string>
     <string name="humidity">湿度 %1$s</string>
     <string name="date">%1$s/%2$s</string>
     <string name="pull_to_refresh">下拉更新</string>
-    <string name="refreshing">正在更新...</string>
+    <string name="refreshing">正在更新…</string>
     <string name="leave_to_refresh">松手可更新</string>
     <string name="turn">%1$s转%2$s</string>
     <string name="umbrella_detail">雨伞指数详情</string>
@@ -155,5 +158,6 @@
     <string name="interval_hour">%1$d小时前更新</string>
     <string name="interval_minute">%1$d分钟前更新</string>
     <string name="interval_just">刚刚更新</string>
+    <string name="Internet_fail">网络连接失败，请检查网络设置</string>
 
 </resources>
