--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -160,4 +160,6 @@
     <string name="interval_just">刚刚更新</string>
     <string name="Internet_fail">网络连接失败，请检查网络设置</string>
 
+    <!-- 城市管理 -->
+    <string name="city_manage">城市管理</string>
 </resources>
