--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -162,4 +162,39 @@
 
     <!-- 城市管理 -->
     <string name="city_manage">城市管理</string>
+    <string name="add_city">添加城市</string>
+    <string name="hot_city">热门城市</string>
+    <string name="location">定位</string>
+    <string name="beijing">北京</string>
+    <string name="tianjin">天津</string>
+    <string name="shanghai">上海</string>
+    <string name="guangzhou">广州</string>
+    <string name="shenzhen">深圳</string>
+    <string name="chongqing">重庆</string>
+    <string name="fuzhou">福州</string>
+    <string name="xian">西安</string>
+    <string name="nanning">南宁</string>
+    <string name="kunming">昆明</string>
+    <string name="jinan">济南</string>
+    <string name="wuhan">武汉</string>
+    <string name="haikou">海口</string>
+    <string name="sanya">三亚</string>
+    <string name="changchun">长春</string>
+    <string name="hefei">合肥</string>
+    <string name="zhengzhou">郑州</string>
+    <string name="taiyuan">太原</string>
+    <string name="nanchang">南昌</string>
+    <string name="lasa">拉萨</string>
+    <string name="xining">西宁</string>
+    <string name="shijiazhuang">石家庄</string>
+    <string name="haerbin">哈尔滨</string>
+    <string name="qingdao">青岛</string>
+    <string name="wuxi">无锡</string>
+    <string name="xiamen">厦门</string>
+    <string name="changsha">长沙</string>
+    <string name="hangzhou">杭州</string>
+    <string name="xianggang">香港</string>
+    <string name="aomen">澳门</string>
+    <string name="taibei">台北</string>
+    <string name="more_city">更多城市</string>
 </resources>
