weather alarm edit

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -137,7 +137,8 @@
     <string name="no">暂无</string>
     <string name="dash">--</string>
     <string name="dash_degree">--℃</string>
-    <string name="alarm">预警</string>
+    <string name="alarm">%1$s预警</string>
+    <string name="alarm_title">%1$s%2$s预警</string>
     <string name="update_time">%1$s发布</string>
     <string name="aqi">%1$s %2$s</string>
     <string name="humidity">湿度 %1$s</string>
