--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -168,5 +168,7 @@
     <string name="more_city">更多城市</string>
     <string name="back">返回</string>
     <string name="china">中国</string>
-    <string name="now_loading">正在加载…</string>
+    <string name="now_loading">正在加载城市，请稍候…</string>
+    <string name="address_city">http://www.weather.com.cn/data/list3/city%1$s.xml</string>
+    <string name="address_weather">http://wthrcdn.etouch.cn/WeatherApi?citykey=%1$s</string>
 </resources>
