--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -171,4 +171,5 @@
     <string name="now_loading">正在加载城市，请稍候…</string>
     <string name="address_city">http://www.weather.com.cn/data/list3/city%1$s.xml</string>
     <string name="address_weather">http://wthrcdn.etouch.cn/WeatherApi?citykey=%1$s</string>
+    <string name="no_city_info">无法获得当前城市信息</string>
 </resources>
