cancel fresh city weather button

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -161,6 +161,8 @@
     <string name="interval_minute">%1$d分钟前更新</string>
     <string name="interval_just">刚刚更新</string>
     <string name="Internet_fail">连接失败，请重新尝试</string>
+    <string name="add_city_fail">添加城市失败，请重新尝试</string>
+    <string name="refresh_fail">城市（%1$s）刷新失败</string>
 
     <!-- 城市管理 -->
     <string name="city_manage">城市管理</string>
