--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -140,7 +140,10 @@
     <string name="dash_degree">--℃</string>
     <string name="alarm">%1$s预警</string>
     <string name="alarm_title">%1$s%2$s预警</string>
-    <string name="update_time">%1$s 发布</string>
+    <string name="update_time">%1$s发布</string>
+    <string name="update_time2">昨天%1$s发布</string>
+    <string name="release_time">%1$s发布</string>
+    <string name="data_void">数据过期</string>
     <string name="aqi">%1$s %2$s</string>
     <string name="humidity">湿度 %1$s</string>
     <string name="date">%1$s/%2$s</string>
