--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -175,9 +175,14 @@
     <string name="back">返回</string>
     <string name="china">中国</string>
     <string name="now_loading">正在加载，请稍候…</string>
+    <string name="now_locating">正在定位，请稍候…</string>
     <string name="address_city">http://www.weather.com.cn/data/list3/city%1$s.xml</string>
     <string name="address_weather">http://wthrcdn.etouch.cn/WeatherApi?citykey=%1$s</string>
-    <string name="no_city_info">选择的城市不存在</string>
+    <string name="no_city_info">城市不存在</string>
     <string name="city_already_added">城市已添加</string>
+    <string name="location_already_added">定位已添加</string>
     <string name="city_weather_update_time">%1$s更新时间</string>
+    <string name="location_fail">定位失败</string>
+    <string name="can_not_find_current_location">无法获取当前位置</string>
+    <string name="auto_location">自动定位</string>
 </resources>
