location release1(local variable)

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -103,6 +103,7 @@
     <string name="save_path">保存路径：</string>
     <string name="roger">知道了</string>
     <string name="unknown">未知</string>
+    <string name="amr">amr</string>
 
     <!-- 录音重命名画面 -->
     <string name="sure">确定</string>
