city manage default city release1

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -168,6 +168,8 @@
     <string name="internet_error">网络异常,请检查网络设置</string>
 
     <!-- 城市管理，添加城市 -->
+    <string name="set_default">设为默认</string>
+    <string name="my_default">默认</string>
     <string name="add_city_fail">添加城市失败，请重新尝试</string>
     <string name="refresh_fail">城市（%1$s）刷新失败</string>
     <string name="city_manage">城市管理</string>
