search city release 1

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -194,4 +194,6 @@
     <string name="prompt">提示</string>
     <string name="retry">重试</string>
     <string name="forbid_power">未开启读取位置权限</string>
+    <string name="input_city_name">请输入城市名称</string>
+    <string name="no_matched_city">没有符合条件的城市</string>
 </resources>
