search more city  change from xml read3

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -185,7 +185,7 @@
     <string name="address_city">http://www.weather.com.cn/data/list3/city%1$s.xml</string>
     <string name="address_weather">http://wthrcdn.etouch.cn/WeatherApi?citykey=%1$s</string>
     <string name="no_city_info">城市不存在</string>
-    <string name="city_already_added">%1$s已添加</string>
+    <string name="city_already_added">城市（%1$s）已添加</string>
     <string name="location_already_added">自动定位已添加</string>
     <string name="city_weather_update_time">%1$s更新时间</string>
     <string name="location_fail">自动定位失败</string>
