天气不是六天不显示

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -168,6 +168,7 @@
     <string name="internet_fail">连接失败，请重试</string>
     <string name="internet_error">网络异常,请检查网络设置</string>
     <string name="auto_location_error_retry">自动定位失败,请重试</string>
+    <string name="no_city_weather_info">暂无天气预报信息</string>
 
 
     <!-- 城市管理，添加城市 -->
