--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -198,4 +198,5 @@
     <string name="forbid_power">未开启读取位置权限</string>
     <string name="input_city_name">请输入城市名称或拼音</string>
     <string name="no_matched_city">没有符合条件的城市</string>
+    <string name="unknown_error">未知错误</string>
 </resources>
