--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -144,6 +144,8 @@
     <string name="alarm_title">%1$s%2$s预警</string>
     <string name="update_time">%1$s发布</string>
     <string name="update_time2">昨天%1$s发布</string>
+    <string name="update_time3">前天%1$s发布</string>
+    <string name="update_time4">%1$s天前发布</string>
     <string name="release_time">%1$s发布</string>
     <string name="data_void">数据过期</string>
     <string name="aqi">%1$s %2$s</string>
