--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -201,4 +201,7 @@
     <string name="input_city_name">请输入城市名称或拼音</string>
     <string name="no_matched_city">没有符合条件的城市</string>
     <string name="unknown_error">未知错误</string>
+
+    <!--计时-->
+    <string name="timer_on_time">计时器时间到了！</string>
 </resources>
