--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -204,4 +204,8 @@
 
     <!--计时-->
     <string name="timer_on_time">计时器时间到了！</string>
+    <string name="siesta">午睡</string>
+    <string name="facial_mask">面膜</string>
+    <string name="instant_noodles">泡面</string>
+    <string name="run">跑步</string>
 </resources>
