--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -204,6 +204,10 @@
 
     <!--计时-->
     <string name="timer_on_time">计时器时间到了！</string>
+    <string name="start">开始</string>
+    <string name="quick_timer">快捷计时</string>
+    <string name="stop">暂停</string>
+    <string name="reset">重置</string>
     <string name="siesta">午睡</string>
     <string name="facial_mask">面膜</string>
     <string name="instant_noodles">泡面</string>
