--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -66,6 +66,8 @@
     <string name="xx_naping">%1$s (小睡中……)</string>
     <string name="nap_to">小睡至%1$s闹钟再次响起，轻触取消</string>
     <string name="nap_time">小睡%1$d分钟</string>
+    <string name="weather_type">%1$s&#160;&#160;&#160;%2$s~%3$s℃</string>
+    <string name="temperature">%1$s℃</string>
 
     <!-- 小睡编辑界面 -->
     <string name="nap_set">小睡设置</string>
