--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
 
     <!-- 闹钟响起界面 -->
     <string name="touch_here_nap">轻按此处小睡%1$d分钟</string>
-    <string name="close_alarm_clock">关闭闹钟</string>
+    <string name="close_alarm_clock">右滑关闭闹钟</string>
     <string name="xx_naping">%1$s (小睡中……)</string>
     <string name="nap_to">小睡至%1$s闹钟再次响起，轻触取消</string>
     <string name="nap_time">小睡%1$d分钟</string>
