--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -214,4 +214,22 @@
     <string name="facial_mask">面膜</string>
     <string name="instant_noodles">泡面</string>
     <string name="run">跑步</string>
+
+    <!--更多-->
+    <string name="theme">主题、壁纸</string>
+    <string name="discover_app">发现APP</string>
+    <string name="scan_two_dimension_code">扫描二维码</string>
+
+    <string name="clear_memory">清除缓存</string>
+    <string name="clean_up">一键清理</string>
+
+    <string name="friend_share">好友分享</string>
+    <string name="software_update">软件更新</string>
+    <string name="faq">常见问题</string>
+    <string name="suggestion_feedback">意见反馈</string>
+    <string name="give_good_reputation">赏个好评</string>
+    <string name="abort_us">关于天气闹钟</string>
+
+    <string name="quit">退出应用</string>
+
 </resources>
