local album1 Android-Universal-Image-Loader

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -235,4 +235,9 @@
     <!--更多-->
     <string name="custom_define">自定义</string>
 
+    <!--本地相册-->
+    <string name="local_album">本地相册</string>
+    <string name="picture_name_number">%1$s(%2$d张)</string>
+    <string name="scanning">正在扫描…</string>
+
 </resources>
