image capture and change theme

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -239,5 +239,6 @@
     <string name="local_album">本地相册</string>
     <string name="picture_name_number">%1$s(%2$d张)</string>
     <string name="scanning">正在扫描…</string>
+    <string name="capture">拍照</string>
 
 </resources>
