添加zxing二维码扫描

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -241,4 +241,8 @@
     <string name="scanning">正在扫描…</string>
     <string name="capture">拍照</string>
 
+    <!--扫描二维码-->
+    <string name="scan_scan">扫一扫</string>
+    <string name="album">相册</string>
+
 </resources>
