二维码扫描验证网址，显示扫描内容

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -218,7 +218,7 @@
     <!--更多-->
     <string name="theme">主题、壁纸</string>
     <string name="discover_app">发现APP</string>
-    <string name="scan_two_dimension_code">扫描二维码</string>
+    <string name="scan_scan">扫一扫</string>
 
     <string name="clear_memory">清除缓存</string>
     <string name="clean_up">一键清理</string>
@@ -242,7 +242,8 @@
     <string name="capture">拍照</string>
 
     <!--扫描二维码-->
-    <string name="scan_scan">扫一扫</string>
     <string name="album">相册</string>
+    <string name="qr_code_generate">二维码生成</string>
+    <string name="scan_result">扫描结果</string>
 
 </resources>
