二维码扫描验证网址，显示扫描内容release

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -245,5 +245,8 @@
     <string name="album">相册</string>
     <string name="qr_code_generate">二维码生成</string>
     <string name="scan_result">扫描结果</string>
+    <string name="copy">复制</string>
+    <string name="search">搜索</string>
+    <string name="text_already_copied">文本已复制到剪贴板</string>
 
 </resources>
