scan code release1

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -248,5 +248,7 @@
     <string name="copy">复制</string>
     <string name="search">搜索</string>
     <string name="text_already_copied">文本已复制到剪贴板</string>
+    <string name="bar_code">条形码：%1$s</string>
+    <string name="decode_null">未解析到任何数据</string>
 
 </resources>
