scan code release2

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -218,7 +218,8 @@
     <!--更多-->
     <string name="theme">主题、壁纸</string>
     <string name="discover_app">发现APP</string>
-    <string name="scan_scan">扫一扫</string>
+    <string name="scan_code">扫码</string>
+    <string name="generate_code">造码</string>
 
     <string name="clear_memory">清除缓存</string>
     <string name="clean_up">一键清理</string>
