本地相册添加最近文件夹并汉字优先排序

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -241,6 +241,12 @@
     <string name="picture_name_number">%1$s(%2$d张)</string>
     <string name="scanning">正在扫描…</string>
     <string name="capture">拍照</string>
+    <string name="recent">最近</string>
+    <string name="camera">相机</string>
+    <string name="screen_short">屏幕截图</string>
+    <string name="we_chat">微信</string>
+    <string name="download">下载</string>
+    <string name="picture">图片</string>
 
     <!--扫描二维码-->
     <string name="album">相册</string>
@@ -251,5 +257,6 @@
     <string name="text_already_copied">文本已复制到剪贴板</string>
     <string name="bar_code">条形码：%1$s</string>
     <string name="decode_null">未解析到任何数据</string>
+    <string name="Alignment_code">对准二维码/条形码</string>
 
 </resources>
