my single button dialog

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -258,5 +258,6 @@
     <string name="bar_code">条形码：%1$s</string>
     <string name="decode_null">未解析到任何数据</string>
     <string name="Alignment_code">对准二维码/条形码</string>
+    <string name="camera_error">相机错误</string>
 
 </resources>
