--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -240,6 +240,7 @@
     <string name="local_album">本地相册</string>
     <string name="picture_name_number">%1$s(%2$d张)</string>
     <string name="scanning">正在扫描…</string>
+    <string name="no_local_album">没有本地图片</string>
     <string name="capture">拍照</string>
     <string name="recent">最近</string>
     <string name="camera">相机</string>
