--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -261,5 +261,10 @@
     <string name="decode_null">未解析到任何数据</string>
     <string name="Alignment_code">对准二维码/条形码</string>
     <string name="camera_error">相机错误</string>
-
+    <!--生成二维码-->
+    <string name="generate_qr_code">生成二维码</string>
+    <string name="select_logo">选择Logo</string>
+    <string name="save_qr_code">保存二维码</string>
+    <string name="input_qr_code_content">输入二维码内容</string>
+    <string name="logo">Logo</string>
 </resources>
