--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -271,4 +271,5 @@
     <string name="generate_qrcode_please">您还没有生成二维码图片呢</string>
     <string name="picture_already_save_to">图片已保存至%1$s</string>
     <string name="save_fail_retry">保存失败，请重试</string>
+    <string name="logo_open_status">打开状态下，二维码图片中央区域显示Logo</string>
 </resources>
