--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -272,4 +272,7 @@
     <string name="picture_already_save_to">图片已保存至%1$s</string>
     <string name="save_fail_retry">保存失败，请重试</string>
     <string name="logo_open_status">打开状态下，二维码图片中央区域显示Logo</string>
+
+    <!--一键清理-->
+    <string name="clean_up_result">清理进程%1$d个,释放内存%2$s</string>
 </resources>
