--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -275,5 +275,8 @@
     <string name="picture_already_save_to">图片已保存至%1$s</string>
     <string name="save_fail_retry">保存失败，请重试</string>
     <string name="logo_open_status">打开状态下，二维码图片中央区域显示Logo</string>
+    <string name="fore_color">二维码前景色</string>
+    <string name="back_color">二维码背景色</string>
+    <string name="restore">恢复默认</string>
 
 </resources>
