造码 使用material design dialog 需要appcompt主题 修改滑动父类继承appcompt 修改其他不整合如自定义dialog

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -271,12 +271,16 @@
     <string name="save_qr_code">保存二维码到手机</string>
     <string name="input_qr_code_content">输入二维码中的信息</string>
     <string name="logo">Logo</string>
-    <string name="generate_qrcode_please">您还没有生成二维码图片呢</string>
+    <string name="generate_qrcode_please">还没有生成二维码图片呢</string>
     <string name="picture_already_save_to">图片已保存至%1$s</string>
     <string name="save_fail_retry">保存失败，请重试</string>
     <string name="logo_open_status">打开状态下，二维码图片中央区域显示Logo</string>
-    <string name="fore_color">二维码前景色</string>
-    <string name="back_color">二维码背景色</string>
+    <string name="qrcode_fore_color">二维码前景色</string>
+    <string name="qrcode_back_color">二维码背景色</string>
     <string name="restore">恢复默认</string>
+    <string name="reset_logo_color">重置Logo、前景色、背景色？</string>
+    <string name="fore_color">前景色</string>
+    <string name="back_color">背景色</string>
+    <string name="colors">颜色</string>
 
 </resources>
