优化天气温度曲线&判断sd通用方法

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -59,6 +59,7 @@
     <string name="local_music">本地音乐</string>
     <string name="record">录音</string>
     <string name="no_ring">无铃声</string>
+    <string name="no_sd_card">无存储设备</string>
 
     <!-- 闹钟响起界面 -->
     <string name="touch_here_nap">轻按此处小睡%1$d分钟</string>
