友盟意见反馈

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -229,7 +229,7 @@
     <string name="friend_share">好友分享</string>
     <string name="software_update">软件更新</string>
     <string name="faq">常见问题</string>
-    <string name="suggestion_feedback">意见反馈</string>
+    <string name="feedback">意见反馈</string>
     <string name="give_good_reputation">赏个好评</string>
     <string name="abort_us">关于天气闹钟</string>
 
@@ -284,4 +284,6 @@
     <string name="back_color">背景色</string>
     <string name="colors">颜色</string>
 
+    <!--意见反馈-->
+    <string name="welcome_suggestion">感谢您提出反馈意见,我会尽快回复</string>
 </resources>
