--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <!-- app名 -->
     <string name="app_name">天气闹钟</string>
+    <string name="version">1.0</string>
     <!-- Tab界面 -->
     <string name="alarm_clock">闹钟</string>
     <string name="time">计时</string>
@@ -231,7 +232,7 @@
     <string name="faq">常见问题</string>
     <string name="feedback">意见反馈</string>
     <string name="give_good_reputation">赏个好评</string>
-    <string name="abort_us">关于天气闹钟</string>
+    <string name="abort">关于</string>
 
     <string name="quit">退出应用</string>
 
@@ -286,4 +287,8 @@
 
     <!--意见反馈-->
     <string name="welcome_suggestion">感谢您提出反馈意见,我会尽快回复</string>
+    <!--关于-->
+    <string name="weac_version">天气闹钟 v%1$s</string>
+    <string name="about_words">风雨无阻，准时与你相约</string>
+    <string name="copyright">Copyright © 2016 Kaku. \nAll Rights Reserved.</string>
 </resources>
