--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -287,8 +287,14 @@
 
     <!--意见反馈-->
     <string name="welcome_suggestion">感谢您提出反馈意见,我会尽快回复</string>
+
     <!--关于-->
     <string name="weac_version">天气闹钟 v%1$s</string>
     <string name="about_words">风雨无阻，准时与你相约</string>
     <string name="copyright">Copyright © 2016 Kaku. \nAll Rights Reserved.</string>
+
+    <!--软件更新-->
+    <string name="latest_version">当前已是最新版本</string>
+    <string name="connection_time_out">连接超时</string>
+    <string name="catching_version">正在获取最新版本信息…</string>
 </resources>
