--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -228,7 +228,7 @@
     <string name="clean_up">一键清理</string>
 
     <string name="friend_share">好友分享</string>
-    <string name="software_update">软件更新</string>
+    <string name="check_update">检查更新</string>
     <string name="faq">常见问题</string>
     <string name="feedback">意见反馈</string>
     <string name="give_good_reputation">赏个好评</string>
@@ -296,5 +296,7 @@
     <!--软件更新-->
     <string name="latest_version">当前已是最新版本</string>
     <string name="connection_time_out">连接超时</string>
-    <string name="catching_version">正在获取最新版本信息…</string>
+    <string name="catching_version">正在检查更新…</string>
+    <!--赏个好评-->
+    <string name="launch_market_fail">未能打开此市场</string>
 </resources>
