--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -298,5 +298,8 @@
     <string name="connection_time_out">连接超时</string>
     <string name="catching_version">正在检查更新…</string>
     <!--赏个好评-->
-    <string name="launch_market_fail">未能打开此市场</string>
+    <string name="launch_market_fail">无法打开应用市场</string>
+    <!--好友分享-->
+    <string name="share_text">我正在使用『天气闹钟』，推荐您也来用用。下载地址：https://github.com/kaku2015
+        或登陆应用市场搜索天气闹钟即可下载。</string>
 </resources>
