--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -300,6 +300,17 @@
     <!--赏个好评-->
     <string name="launch_market_fail">无法打开应用市场</string>
     <!--好友分享-->
-    <string name="share_text">我正在使用『天气闹钟』，推荐您也来用用。下载地址：https://github.com/kaku2015
-        或登陆应用市场搜索天气闹钟即可下载。</string>
+    <string name="share_text">我正在使用『天气闹钟』，推荐您也来试试。下载地址：https://github.com/kaku2015
+        或登陆应用商城搜索『天气闹钟』即可下载。</string>
+    <!--常见问题-->
+    <string name="no_alarm">☆ 闹钟没有响起？</string>
+    <string name="no_alarm_detail1">1.关机了</string>
+    <string name="no_alarm_detail2">2.应用被其他优化软件清理，请进入该软件并将天气闹钟加入忽略清单。</string>
+    <string name="no_alarm_detail3">3.手机重启时没有允许天气闹钟自动启动。</string>
+    <string name="weather_prompt_wrong">☆ 天气提示城市不准确？</string>
+    <string name="weather_prompt_wrong_detail">进入城市管理界面，将天气提示城市设为默认。</string>
+    <string name="can_not_location">☆ 无法自动定位？</string>
+    <string name="can_not_location_detail">请检查手机设置是否已经授权定位权限，如果还是无法定位或定位不准确请手动添加城市。</string>
+    <string name="weather_can_not_update">☆ 天气不能更新？</string>
+    <string name="weather_can_not_update_detail">请检查网络环境，如果网络正常仍然无法更新，请稍后再试。</string>
 </resources>
