再按一次退出

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!-- app名 -->
     <string name="app_name">天气闹钟</string>
     <string name="version">1.0</string>
+    <string name="press_again_exit">再按一次退出</string>
     <!-- Tab界面 -->
     <string name="alarm_clock">闹钟</string>
     <string name="time">计时</string>
