--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -127,6 +127,7 @@
     <string name="play_fail">播放失败</string>
 
     <!-- 天气 -->
+    <string name="loading">正在加载…</string>
     <string name="yesterday">昨天</string>
     <string name="today">今天</string>
     <string name="tomorrow">明天</string>
@@ -176,7 +177,6 @@
     <string name="internet_error">网络异常,请检查网络设置</string>
     <string name="auto_location_error_retry">自动定位失败,请重试</string>
     <string name="no_city_weather_info">暂无天气预报信息</string>
-
 
     <!-- 城市管理，添加城市 -->
     <string name="set_default">设为默认</string>
@@ -292,7 +292,7 @@
     <!--关于-->
     <string name="weac_version">天气闹钟 v%1$s</string>
     <string name="weac_slogan">准时叫醒你的梦想</string>
-    <string name="copyright">© 2016 Kaku. All Rights Reserved.</string>
+    <string name="copyright">© 2016 咖枯. All Rights Reserved.</string>
 
     <!--软件更新-->
     <string name="latest_version">当前已是最新版本</string>
