闹钟响起画面布局修改

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -70,6 +70,7 @@
     <string name="nap_time">小睡%1$d分钟</string>
     <string name="weather_type">%1$s&#160;&#160;&#160;%2$s~%3$s℃</string>
     <string name="temperature">%1$s℃</string>
+    <string name="bring_an_umbrella">带伞</string>
 
     <!-- 小睡编辑界面 -->
     <string name="nap_set">小睡设置</string>
