litePal 1.3.1 新增saveFast方法 通过嵌套父组件解决overScrollView越界问题

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -233,6 +233,7 @@
     <string name="faq">常见问题</string>
     <string name="feedback">意见反馈</string>
     <string name="give_good_reputation">赏个好评</string>
+    <string name="rewards_me">打赏我</string>
     <string name="abort">关于</string>
 
     <string name="quit">退出应用</string>
@@ -315,4 +316,7 @@
         请确认是否打开并授权该功能，如果自动定位功能设置正常仍出现无法定位或定位不准确的情况，请您手动添加城市。</string>
     <string name="weather_can_not_update">☆ 天气不能更新？</string>
     <string name="weather_can_not_update_detail">天气更新需要连接网络，请确认网络连接是否正常，若网络正常仍然无法更新，请稍后再试。</string>
+
+    <!--打赏我-->
+    <string name="need_charge">电量不足，求发个红包补充电量。</string>
 </resources>
