--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -233,7 +233,7 @@
     <string name="faq">常见问题</string>
     <string name="feedback">意见反馈</string>
     <string name="give_good_reputation">赏个好评</string>
-    <string name="rewards">打赏</string>
+    <string name="rewards_author">打赏作者</string>
     <string name="abort">关于</string>
 
     <string name="quit">退出应用</string>
@@ -319,7 +319,6 @@
     <string name="weather_can_not_update_detail">天气更新需要连接网络，请确认网络连接是否正常，若网络正常仍然无法更新，请稍后再试。</string>
 
     <!--打赏我-->
-    <string name="rewards_title">给作者充电？</string>
-    <string name="rewards_detail">点击按钮后，作者支付宝账号将会复制到剪贴板，您就可以使用支付宝给作者补充电量啦。</string>
-    <string name="ok">好的</string>
+    <string name="rewards">打赏</string>
+    <string name="rewards_detail">点击打赏按钮，作者支付宝账号便会自动复制到剪贴板上，此时您可以打开手机支付宝app打赏作者。作者跪谢～</string>
 </resources>
