打赏自动跳转，计时高度计算，logo图标

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -302,5 +302,5 @@
 
     <!--打赏我-->
     <string name="rewards">打赏</string>
-    <string name="rewards_detail">点击打赏按钮，作者支付宝账号便会自动复制到剪贴板上，此时您可以打开手机支付宝app打赏作者。作者跪谢～</string>
+    <string name="rewards_detail">点击打赏按钮，作者支付宝账号便会自动复制到剪贴板上，此时您可以通过手机支付宝打赏作者。作者跪谢～</string>
 </resources>
