--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -297,7 +297,7 @@
     <string name="can_not_location">☆ 无法自动定位城市</string>
     <string name="can_not_location_detail">自动定位功能需要打开GPS，并授权天气闹钟使用该功能，
         请确认是否打开并授权该功能，如果自动定位功能设置正常仍出现无法定位或定位不准确的情况，请您手动添加城市。</string>
-    <string name="weather_can_not_update">☆ 天气不能更新？</string>
+    <string name="weather_can_not_update">☆ 天气不能更新</string>
     <string name="weather_can_not_update_detail">天气更新需要连接网络，请确认网络连接是否正常，若网络正常仍然无法更新，请稍后再试。</string>
 
     <!--打赏我-->
