--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -284,8 +284,8 @@
     <!--赏个好评-->
     <string name="launch_market_fail">无法打开应用市场</string>
     <!--好友分享-->
-    <string name="share_text">我正在使用『天气闹钟』，推荐您也来试试。下载地址：http://beta.qq.com/m/v6vo
-        或登陆应用商城（360、豌豆荚、91助手等）搜索『天气闹钟』即可下载。</string>
+    <string name="share_text">我正在使用『天气闹钟』，推荐您也来试试。下载地址：http://zhushou.360.cn/detail/index/soft_id/3242718
+        或登陆应用商城（360、豌豆荚、应用宝）搜索『天气闹钟』即可下载。</string>
     <!--常见问题-->
     <string name="no_alarm">☆ 闹钟没有正常响起\n以下原因均会导致闹钟无法正常响起：</string>
     <string name="no_alarm_detail1">1.关机，请开启您的设备，确保天气闹钟能够正常运行</string>
@@ -293,10 +293,9 @@
     <string name="no_alarm_detail3">3.手机重启时没有允许天气闹钟自动启动，请在手机设置中开启天气闹钟自动启动功能，确保闹钟正常响起。</string>
     <string name="weather_prompt_wrong">☆ 天气提示城市无或不准确</string>
     <string name="weather_prompt_wrong_detail">进入城市管理界面，将天气提示城市设为默认。如果是自动定位不准确，
-        请手动添加城市，并设为默认。</string>
+        请手动添加城市，并设为默认。建议手动添加城市，以便提升获取天气信息的加载速度和准确性</string>
     <string name="can_not_location">☆ 无法自动定位城市</string>
-    <string name="can_not_location_detail">自动定位功能需要打开GPS，并授权天气闹钟使用该功能，
-        请确认是否打开并授权该功能，如果自动定位功能设置正常仍出现无法定位或定位不准确的情况，请您手动添加城市。</string>
+    <string name="can_not_location_detail">请确认是否已授权天气闹钟读取位置信息，如果已授权仍出现无法定位或定位不准确的情况，请您手动添加城市。</string>
     <string name="weather_can_not_update">☆ 天气不能更新</string>
     <string name="weather_can_not_update_detail">天气更新需要连接网络，请确认网络连接是否正常，若网络正常仍然无法更新，请稍后再试。</string>
 
