修复个别机型没有提供图片裁剪功能，提示错误信息

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -240,6 +240,7 @@
     <string name="we_chat">微信</string>
     <string name="download">下载</string>
     <string name="picture">图片</string>
+    <string name="no_crop_action">您的设备没有提供裁剪图片功能</string>
 
     <!--扫描二维码-->
     <string name="album">相册</string>
