--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <!-- 闹铃界面 -->
     <string name="press_right_top">按右上的  </string>
     <string name="add_alarm_clock">  添加闹钟  </string>
+    <string name="retrieve_alarm_clock_success">被删除的闹钟已成功找回</string>
     <!-- 新建编辑闹钟界面 -->
     <string name="new_alarm_clock">新建闹钟</string>
     <string name="edit_alarm_clock">编辑闹钟</string>
@@ -303,4 +304,8 @@
     <!--打赏我-->
     <string name="rewards">打赏</string>
     <string name="rewards_detail">点击打赏按钮，作者支付宝账号便会自动复制到剪贴板上，此时您可以通过手机支付宝打赏作者。作者跪谢～</string>
+
+    <!--摇一摇找回闹钟说明-->
+    <string name="shake_retrieve_recently_deleted_ac">编辑状态下摇动手机您可以找回最近一次删除的闹钟</string>
+    <string name="no_tip">不再提示</string>
 </resources>
