增加闹钟误删常见问题

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -300,12 +300,14 @@
     <string name="can_not_location_detail">请确认是否已授权天气闹钟读取位置信息，如果已授权仍出现无法定位或定位不准确的情况，请您手动添加城市。</string>
     <string name="weather_can_not_update">☆ 天气不能更新</string>
     <string name="weather_can_not_update_detail">天气更新需要连接网络，请确认网络连接是否正常，若网络正常仍然无法更新，请稍后再试。</string>
+    <string name="ac_delete_miss">☆ 闹钟误删</string>
+    <!--<string name="shake_retrieve_recently_deleted_ac_faq">编辑闹钟状态下摇动手机，您可以找回最近一次删除的闹钟。</string>-->
 
     <!--打赏我-->
     <string name="rewards">打赏</string>
     <string name="rewards_detail">点击打赏按钮，作者支付宝账号便会自动复制到剪贴板上，此时您可以通过手机支付宝打赏作者。作者跪谢～</string>
 
     <!--摇一摇找回闹钟说明-->
-    <string name="shake_retrieve_recently_deleted_ac">编辑状态下摇动手机您可以找回最近一次删除的闹钟</string>
+    <string name="shake_retrieve_recently_deleted_ac">编辑闹钟状态下摇动手机，您可以找回最近一次删除的闹钟。</string>
     <string name="no_tip">不再提示</string>
 </resources>
