修改摇一摇提示

--- a/workspace/WeAC/src/main/res/values/strings.xml
+++ b/workspace/WeAC/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <!-- app名 -->
     <string name="app_name">天气闹钟</string>
-    <string name="version">1.0.2</string>
+    <string name="version">1.1</string>
     <string name="press_again_exit">再按一次退出</string>
     <!-- Tab界面 -->
     <string name="alarm_clock">闹钟</string>
@@ -308,6 +308,6 @@
     <string name="rewards_detail">点击打赏按钮，作者支付宝账号便会自动复制到剪贴板上，此时您可以通过手机支付宝打赏作者。作者跪谢～</string>
 
     <!--摇一摇找回闹钟说明-->
-    <string name="shake_retrieve_recently_deleted_ac">编辑闹钟状态下摇动手机，您可以找回最近一次删除的闹钟。</string>
+    <string name="shake_retrieve_recently_deleted_ac">编辑状态下摇动手机，您可以找回最近一次删除的闹钟。</string>
     <string name="no_tip">不再提示</string>
 </resources>
