搜索二维码没有内置浏览器提示，待添加webview

--- a/WeAC/src/main/res/values/strings.xml
+++ b/WeAC/src/main/res/values/strings.xml
@@ -242,6 +242,7 @@
     <string name="download">下载</string>
     <string name="picture">图片</string>
     <string name="no_crop_action">您的设备没有提供裁剪图片功能</string>
+    <string name="no_browser">您的设备没有提供内置浏览器</string>
 
     <!--扫描二维码-->
     <string name="album">相册</string>
