修复activity销毁计时器显示时间时异常崩溃

--- a/WeAC/src/main/res/values/strings.xml
+++ b/WeAC/src/main/res/values/strings.xml
@@ -69,7 +69,7 @@
     <string name="nap_time">小睡%1$d分钟</string>
     <string name="weather_type">%1$s&#160;%2$s~%3$s℃</string>
     <string name="bring_an_umbrella">带伞</string>
-    <string name="alarm_error">未知异常，请到闹钟界面重新设置当前闹钟</string>
+    <string name="alarm_error">未知闹钟异常</string>
 
     <!-- 小睡编辑界面 -->
     <string name="nap_set">小睡设置</string>
