新建闹钟温馨提示

--- a/WeAC/src/main/res/values/strings.xml
+++ b/WeAC/src/main/res/values/strings.xml
@@ -49,6 +49,13 @@
     <string name="week">周</string>
     <string name="caesura">、</string>
 
+    <string name="warm_tips_title">温馨提示</string>
+    <string name="warm_tips_detail">亲，由于Android系统限制，如不响铃，可能是如下原因：\n
+    1.闹钟未被加入安全软件的应用保护名单\n
+    2.闹钟后台已被安全类软件误清理\n
+    3.软件安装在SD卡\n
+    4.关机</string>
+
     <!-- 铃声选择界面 -->
     <string name="ring_select">铃声选择</string>
     <string name="no_system_ring_file">没有系统铃声文件</string>
